--- a/index.html
+++ b/index.html
@@ -1,2 +1,16 @@
-<h1>trnr.dev/</h1>
-Built using https://pages-themes.github.io/hacker/
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>trnr.dev/></title>
+  <meta name="description" content="Website for trnr.dev">
+  <meta name="trnr" content="Personal site">
+  <link rel="stylesheet" href="assets/css/style.scss">
+</head>
+
+<body>
+  <h1>trnr.dev/</h1>
+  Built using https://pages-themes.github.io/hacker/
+
+</body>
+</html>
