--- a/index.html
+++ b/index.html
@@ -14,23 +14,38 @@
 </head>
 
 <body>
-    <video autoplay loop id="Infamy">
-      <source src="assets/InfamyReloaded.mp4" type="video/mp4">
-    </video>
-    
-    <h1 class="site">trnr.dev</h1>
-
-    <div class="container">
-        <h1><span class=color-1>Hey,</span> I'm <span class="color-7">Turner</span>.</h1>
-        <p>Minecraft Server Developer, Student, Gamer</p>
-        <div class="buttons">
-            <a href="https://discordapp.com/invite/SWYRUGy" class="button bouncy color-0" style="animation-delay:0.07s">Infamy Reloaded</a>
-            <a href="#" class="button bouncy projects color-3" style="animation-delay:0.14s"><span>Projects</span></a>
-            <a href="https://github.com/Trnrr/" class="button bouncy color-6" style="animation-delay:0.21s">Github</a>
-            <a href="#" class="button bouncy discord color-5" style="animation-delay:0.28s"><span>Discord</span></a>
-            <!-- Button base design from https://fdossena.com/?p=html5cool/buttons/i.frag -->
-        </div> 
+  <!-- If video file is on webserver and not a youtube video -->
+  <video autoplay loop id="Infamy">
+      <!--<source src="assets/InfamyReloaded.mp4" type="video/mp4">-->
+      Your browser does not support the video tag.
+  </video>
+  
+  <div class=vidbg">
+    <div class="vidfg">
+       <!-- <iframe frameborder="0" height="100%" width="100%"
+        src="https://www.youtube.com/embed/U6eOdW_M-6s?controls=0
+        &showinfo=0
+        &rel=0
+        &autoplay=1
+        &loop=1
+        &playlist=U6eOdW_M-6s">
+      </iframe>-->
+      <iframe src="https://streamable.com/s/heay7/appghq?autoplay=1" frameborder="0" width="100%" height="100%" allowfullscreen></iframe>
     </div>
+  </div>
+  <h1 class="site">trnr.dev</h1>
+
+  <div class="container">
+    <h1><span class=color-1>Hey,</span> I'm <span class="color-7">Turner</span>.</h1>
+    <p>Minecraft Server Developer, Student, Gamer</p>
+    <div class="buttons">
+      <a href="https://discordapp.com/invite/SWYRUGy" class="button bouncy color-0" style="animation-delay:0.07s">Infamy Reloaded</a>
+      <a href="#" class="button bouncy projects color-3" style="animation-delay:0.14s"><span>Projects</span></a>
+      <a href="https://github.com/Trnrr/" class="button bouncy color-6" style="animation-delay:0.21s">Github</a>
+      <a href="#" class="button bouncy discord color-5" style="animation-delay:0.28s"><span>Discord</span></a>
+      <!-- Button base design from https://fdossena.com/?p=html5cool/buttons/i.frag -->
+    </div> 
+  </div>
 </body>
 </html>
 
