--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <!-- If video file is on webserver and not a youtube video -->
+  <!-- If video file is on webserver and not a streamable video -->
   <video autoplay loop id="Infamy">
       <!--<source src="assets/InfamyReloaded.mp4" type="video/mp4">-->
       Your browser does not support the video tag.
@@ -22,14 +22,6 @@
   
   <div class=vidbg">
     <div class="vidfg">
-       <!-- <iframe frameborder="0" height="100%" width="100%"
-        src="https://www.youtube.com/embed/U6eOdW_M-6s?controls=0
-        &showinfo=0
-        &rel=0
-        &autoplay=1
-        &loop=1
-        &playlist=U6eOdW_M-6s">
-      </iframe>-->
       <iframe src="https://streamable.com/s/heay7/appghq?autoplay=1" frameborder="0" width="100%" height="100%" allowfullscreen></iframe>
     </div>
   </div>
