--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   
   <div class=vidbg">
     <div class="vidfg">
-      <iframe src="https://streamable.com/s/heay7/appghq?autoplay=1&muted=1" frameborder="0" width="100%" height="100%" allowfullscreen></iframe>
+      <iframe src="https://streamable.com/s/heay7/kgafkz?autoplay=1&muted=1" frameborder="0" width="100%" height="100%" allowfullscreen></iframe>
     </div>
   </div>
   <h1 class="site">trnr.dev</h1>
