--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
   <meta name="author" content="trnr">
 
   <link rel="stylesheet" type="text/css" href="assets/css/landing.css">
+  <link rel="shortcut icon" type="image/x-icon" href="assets/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
 
 <body>
-  <!-- If video file is on webserver and not a streamable video -->
+  <!-- If video file is on webserver and not a youtube video -->
   <video autoplay loop id="Infamy">
       <!--<source src="assets/InfamyReloaded.mp4" type="video/mp4">-->
       Your browser does not support the video tag.
@@ -22,6 +23,14 @@
   
   <div class=vidbg">
     <div class="vidfg">
+       <!-- <iframe frameborder="0" height="100%" width="100%"
+        src="https://www.youtube.com/embed/U6eOdW_M-6s?controls=0
+        &showinfo=0
+        &rel=0
+        &autoplay=1
+        &loop=1
+        &playlist=U6eOdW_M-6s">
+      </iframe>-->
       <iframe src="https://streamable.com/s/heay7/kgafkz?autoplay=1&muted=1" frameborder="0" width="100%" height="100%" allowfullscreen></iframe>
     </div>
   </div>
@@ -40,5 +49,3 @@
   </div>
 </body>
 </html>
-
-
