--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
   <meta charset="utf-8">
 
   <title>trnr.dev</title>
-  <meta name="description" content="Add me on myspace">
+  <meta name="description" content="Add me on skype">
   <meta name="author" content="Turner">
-  <meta name="theme-color" content="5B66FF">
+  <meta name="theme-color" content="#5B66FF" />
+
 
   <link rel="stylesheet" type="text/css" href="assets/css/landing.css">
   <link rel="shortcut icon" type="image/x-icon" href="assets/favicon.ico">
@@ -50,3 +51,5 @@
   </div>
 </body>
 </html>
+
+
