--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
   <title>trnr.dev</title>
   <meta name="description" content="Add me on skype">
   <meta name="author" content="Turner">
-  <meta name="theme-color" content="#5B66FF" />
-
+  <meta name="theme-color" content="#5B66FF">
+  
+  <!--For discord-->
+  <meta property="og:title" content="Add me on myspace" >
+  <meta property="og:description" content="" >
+  <meta property="og:image" content="https://raw.githubusercontent.com/Trnrr/trnrr.github.io/master/assets/test.JPG" >
+  
 
   <link rel="stylesheet" type="text/css" href="assets/css/landing.css">
   <link rel="shortcut icon" type="image/x-icon" href="assets/favicon.ico">
@@ -25,14 +30,6 @@
   
   <div class=vidbg">
     <div class="vidfg">
-       <!-- <iframe frameborder="0" height="100%" width="100%"
-        src="https://www.youtube.com/embed/U6eOdW_M-6s?controls=0
-        &showinfo=0
-        &rel=0
-        &autoplay=1
-        &loop=1
-        &playlist=U6eOdW_M-6s">
-      </iframe>-->
       <iframe src="https://streamable.com/s/heay7/kgafkz?autoplay=1&muted=1" frameborder="0" width="100%" height="100%" allowfullscreen></iframe>
     </div>
   </div>
