--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <meta name="theme-color" content="#5B66FF">
   
   <!--For discord-->
-  <meta property="og:title" content="Add me on myspace" >
-  <meta property="og:description" content="" >
-  <meta property="og:image" content="https://raw.githubusercontent.com/Trnrr/trnrr.github.io/master/assets/test.JPG" >
+  <meta property="og:title" content="Server Owner of Infamy Reloaded" >
+  <meta property="og:description" content="Hytale hype and add me on myspace" >
+  <meta property="og:image" content="https://hytale.com/static/images/media/screenshots/4.jpg" >
   
 
   <link rel="stylesheet" type="text/css" href="assets/css/landing.css">
