--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
   <title>trnr.dev</title>
   <meta name="description" content="Add me on skype">
   <meta name="author" content="Turner">
-  <meta name="theme-color" content="#5B66FF">
+  <meta name="theme-color" content="#ff8333">
   
   <!--For discord-->
   <meta property="og:title" content="Server Owner of Infamy Reloaded" >
-  <meta property="og:description" content="Hytale hype and add me on myspace" >
+  <meta property="og:description" content="Infamy Reloaded is a modpack centered around weaponry and technology.
+                                           Sound interesting? Download here: https://www.technicpack.net/modpack/totalwarcraft-factions.1330533
+                                           Hytale hype and add me on myspace" >
   <meta property="og:image" content="https://hytale.com/static/images/media/screenshots/4.jpg" >
   
 
