--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
   <meta name="theme-color" content="#ff8333">
   
   <!--For discord-->
-  <meta property="og:title" content="Server Owner of Infamy Reloaded" >
+  <meta property="og:site_name" content="Turner">
+  <meta property="og:url" content="https://trnr.dev">
+  <meta property="og:title" content="Server Owner of Infamy Reloaded">
+  <meta property="og:type" content="website">
+  <meta name="og:image" itemprop="image" content="https://hytale.com/static/images/media/screenshots/4.jpg">
   <meta property="og:description" content="Infamy Reloaded is a modpack centered around weaponry and technology.
                                            Sound interesting? Download here: https://www.technicpack.net/modpack/totalwarcraft-factions.1330533
-                                           Hytale hype and add me on myspace" >
-  <meta property="og:image" content="https://hytale.com/static/images/media/screenshots/4.jpg" >
+                                           Hytale Hype!" >
   
 
   <link rel="stylesheet" type="text/css" href="assets/css/landing.css">
