--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <title>trnr.dev</title>
   <meta name="description" content="Add me on skype">
-  <meta name="author" content="Turner">
+  <meta name="author" content="Turner | Infamy Reloaded">
   <meta name="theme-color" content="#ff8333">
   
   <!--For discord-->
