--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 
   <title>trnr.dev</title>
   <meta name="description" content="Add me on skype">
-  <meta name="author" content="Turner | Infamy Reloaded">
+  <meta name="author" content="Turner">
   <meta name="theme-color" content="#ff8333">
   
   <!--For discord-->
-  <meta property="og:site_name" content="Turner">
+  <meta property="og:site_name" content="Turner | Infamy Reloaded">
   <meta property="og:url" content="https://trnr.dev">
-  <meta property="og:title" content="Server Owner of Infamy Reloaded">
+  <meta property="og:title" content="Infamy Reloaded Server Owner">
   <meta property="og:type" content="website">
   <meta name="og:image" itemprop="image" content="https://hytale.com/static/images/media/screenshots/4.jpg">
   <meta property="og:description" content="Infamy Reloaded is a modpack centered around weaponry and technology.
