--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta charset="utf-8">
 
   <title>trnr.dev</title>
-  <meta name="description" content="Add me on skype">
   <meta name="author" content="Turner">
   <meta name="theme-color" content="#ff8333">
   
@@ -15,15 +14,15 @@
   <meta property="og:title" content="Infamy Reloaded Server Owner">
   <meta property="og:type" content="website">
   <meta name="og:image" itemprop="image" content="https://hytale.com/static/images/media/screenshots/4.jpg">
+  <!--Update description to only show main page, move to diff pages-->
   <meta property="og:description" content="Infamy Reloaded is a modpack centered around weaponry and technology.
                                            Sound interesting? Download here: https://www.technicpack.net/modpack/totalwarcraft-factions.1330533
                                            Hytale Hype!" >
-  
+  <!--End for Discord-->
 
   <link rel="stylesheet" type="text/css" href="assets/css/landing.css">
   <link rel="shortcut icon" type="image/x-icon" href="assets/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
 </head>
 
 <body>
@@ -38,20 +37,19 @@
       <iframe src="https://streamable.com/s/heay7/kgafkz?autoplay=1&muted=1" frameborder="0" width="100%" height="100%" allowfullscreen></iframe>
     </div>
   </div>
-  <h1 class="site">trnr.dev</h1>
+  <h1 class="site"><a href="index.html">> trnr.dev</a></h1>
 
   <div class="container">
-    <h1><span class=color-1>Hey,</span> I'm <span class="color-7">Turner</span>.</h1>
-    <p>Minecraft Server Developer, Student, Gamer</p>
+    <h1 class="header"><span class=color-1>Hey,</span> I'm <span class="color-7">Turner</span>.</h1>
+    <p class="header">Minecraft Server Developer, Student, Gamer</p>
     <div class="buttons">
       <a href="https://discordapp.com/invite/SWYRUGy" class="button bouncy color-0" style="animation-delay:0.07s">Infamy Reloaded</a>
-      <a href="#" class="button bouncy projects color-3" style="animation-delay:0.14s"><span>Projects</span></a>
+      <a href="https://discord.gg/cJvgDpZ" class="button bouncy color-8" style="animation-delay:0.07s">Voltage Network</a>
+      <a href="projects.html" title="Work in progress :)" class="button bouncy projects color-3" style="animation-delay:0.14s"><span>Projects</span></a>
       <a href="https://github.com/Trnrr/" class="button bouncy color-6" style="animation-delay:0.21s">Github</a>
-      <a href="#" class="button bouncy discord color-5" style="animation-delay:0.28s"><span>Discord</span></a>
+      <a href="https://discordapp.com/" class="button bouncy discord color-5" style="animation-delay:0.28s"><span>Discord</span></a>
       <!-- Button base design from https://fdossena.com/?p=html5cool/buttons/i.frag -->
     </div> 
   </div>
 </body>
 </html>
-
-
