--- a/projects.html
+++ b/projects.html
@@ -27,7 +27,7 @@
 
 <body>
   
-  <h1 class="site"><a class="navproject" href="index.html"><span>> trnr.dev/<span class="color-3">projects</span></span></a></h1>
+  <h1 class="site"><a class="navproject" href="https://trnr.dev"><span>> trnr.dev/<span class="color-3">projects</span></span></a></h1>
 
   <div class="container">
     <h1 class="header"><span class=color-1>Hey,</span> I'm <span class="color-7">Turner</span>.</h1>
@@ -35,7 +35,7 @@
     <div class="buttons">
       <a href="https://discordapp.com/invite/SWYRUGy" class="button bouncy color-0" style="animation-delay:0.07s">Infamy Reloaded</a>
       <a href="https://discord.gg/cJvgDpZ" class="button bouncy color-8" style="animation-delay:0.07s">Voltage Network</a>
-      <a href="projects.html" title="Work in progress :)" class="button bouncy projects color-3" style="animation-delay:0.14s"><span>Projects</span></a>
+      <a href="projects" title="Work in progress :)" class="button bouncy projects color-3" style="animation-delay:0.14s"><span>Projects</span></a>
       <a href="https://github.com/Trnrr/" class="button bouncy color-6" style="animation-delay:0.21s">Github</a>
       <a href="https://discordapp.com/" class="button bouncy discord color-5" style="animation-delay:0.28s"><span>Discord</span></a>
       <!-- Button base design from https://fdossena.com/?p=html5cool/buttons/i.frag -->
